--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@ng-bootstrap/ng-bootstrap": "8.0.0",
         "@prettier/plugin-pug": "1.10.1",
         "chart.js": "2.9.4",
+        "lodash": "^4.17.21",
         "object-hash": "2.0.3",
         "rxjs": "6.6.3",
         "sweetalert2": "^11.0.18",
@@ -58,6 +59,7 @@
         "@types/chart.js": "2.9.28",
         "@types/jasmine": "3.6.1",
         "@types/jasminewd2": "2.0.8",
+        "@types/lodash": "^4.14.171",
         "@types/node": "14.14.8",
         "@types/object-hash": "1.3.4",
         "@types/uuid": "8.3.0",
